--- a/webresearcher/notes.html
+++ b/webresearcher/notes.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script  type="text/javascript" src="webresearcher/popup.js"></script>
+    <script  type="text/javascript" src="popup.js"></script>
 
     <link rel="stylesheet" href="style.css"/>
   </head>
