--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,9 @@
 
 	</head>
 	<body>
-	<h1> This is a test </h1>
+	<script type="text/javascript" src="popup.js"></script>
+
+	<button id="go" ><h3> Click here to start </h3></button>
+
 	</body>
 </html>
