--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,7 @@
 	</head>
 	<body>
 	<script type="text/javascript" src="popup.js"></script>
-
-	<button id="go" ><h3> Click here to start </h3></button>
+	<button style="background-color: #0099ff; border: none; color: black; padding: 15px 32px; text-align: center;" id="go" ><h3> Click here to start </h3></button>
 
 	</body>
 </html>
