removing shift dependency to move notes arounda and changes to options page

--- a/options.html
+++ b/options.html
@@ -10,6 +10,8 @@
   <form>
       <label>TW file (e.g., http:0.0.0.0:8024/index.html)</label>
       <input type="text" id="TWFilepath" >
+      <label><br>Contextual highlighting (true or false)</label>
+      <input type="text" id="MarkJSHighlight" >
       <button type="submit">Save</button>
   </form>
   <script src="options.js"></script>
