--- a/webresearcher/notes.html
+++ b/webresearcher/notes.html
@@ -17,7 +17,7 @@
   <input style="position: absolute; bottom:7%; width:100%;"  id="urlInput" type="text">Enter url here: </input>
   <div class="container">
   <button class="btn btn-lg btn-primary" style="position: absolute; bottom:0%; left:0% " id="link">Load url</button>
-  <button class="btn btn-lg btn-primary" style="position: absolute; bottom:0%; left:15% " id="newnote">New note</button>
+  <!-- <button class="btn btn-lg btn-primary" style="position: absolute; bottom:0%; left:15% " id="newnote">New note</button> -->
   <!-- <button class="btn btn-lg btn-primary" style="position: absolute; bottom:0%; left:30% " id="refreshIframe">Reload TW</button> -->
 
 </div>
