--- a/webresearcher/notes.html
+++ b/webresearcher/notes.html
@@ -1,26 +1,22 @@
+<!-- Sidebar html page -->
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <meta charset="utf-8">
-    <script  type="text/javascript" src="popup.js"></script>
-
-      <link rel="stylesheet" href="../ext_libs/bootstrap.min.css"/>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <script  type="text/javascript" src="popup.js"></script>
+  <link rel="stylesheet" href="../ext_libs/bootstrap.min.css"/>
+</head>
 
 <body>
 <div id="iframeDiv">
-<iframe id="browser" src="http://0.0.0.0:8001/tiddlyroam3.html" style="position: absolute; height: 88%; width:100%;"> ></iframe>
+  <iframe id="browser" src="http://0.0.0.0:8001/tiddlyroam3.html" style="position: absolute; height: 88%; width:100%;"> ></iframe>
 </div>
 
 <div>
   <input style="position: absolute; bottom:7%; width:100%;"  id="urlInput" type="text">Enter url here: </input>
   <div class="container">
   <button class="btn btn-lg btn-primary" style="position: absolute; bottom:0%; left:0% " id="link">Load url</button>
-  <!-- <button class="btn btn-lg btn-primary" style="position: absolute; bottom:0%; left:15% " id="newnote">New note</button> -->
-  <!-- <button class="btn btn-lg btn-primary" style="position: absolute; bottom:0%; left:30% " id="refreshIframe">Reload TW</button> -->
-
-</div>
+  </div>
 </div>
 </body>
 
