Restructuring + Joplin export

--- a/options.html
+++ b/options.html
@@ -12,6 +12,8 @@
       <input type="text" id="TWFilepath" >
       <label><br>Contextual highlighting (true or false)</label>
       <input type="text" id="MarkJSHighlight" >
+      <label><br>Joplin Token</label>
+      <input type="text" id="joplinToken" >      
       <button type="submit">Save</button>
   </form>
   <script src="options.js"></script>
