--- a/options.html
+++ b/options.html
@@ -8,12 +8,10 @@
 
 <body>
   <form>
-      <label>TW file (e.g., http:0.0.0.0:8024/index.html)</label>
-      <input type="text" id="TWFilepath" >
       <label><br>Contextual highlighting (true or false)</label>
       <input type="text" id="MarkJSHighlight" >
       <label><br>Joplin Token</label>
-      <input type="text" id="joplinToken" >      
+      <input type="password" id="joplinToken" >
       <button type="submit">Save</button>
   </form>
   <script src="options.js"></script>
