--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -169,7 +169,7 @@
                   });
              var editedTime = new Date(edjsData['JSON'][foo_loaded_keys[j]]['time']).toString();
 
-             titleInput.innerHTML = "<a href='" + "" + "'>" + "Source &#128279;" + "</a><br>" + tagsDiv + "<br><i class='lastModified'>Last edited on:"+ editedTime  + "</i>";
+             titleInput.innerHTML = "<a href='" + allDataKeys[i] + "'>" +   edjsData['TITLE'] +  " &#128279;" + "</a><br>" + tagsDiv + "<br><i class='lastModified'>Last edited on:"+ editedTime  + "</i>";
 
              noteDiv.appendChild(titleInput);
 
