--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -8,22 +8,19 @@
             background-color: #f4f4f4;
             padding: 20px;
         }
+  
         .note-content {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
             grid-gap: 1em;
         }
 
-
-        .iframenote {
-          display:block;
-            overflow-y:scroll;
-            background-color: #fff;
-            transition: box-shadow 0.3s ease;
-            margin: 0 auto;
-
-
+        .note-display {
+            width: 100%;
+            height: 100%;
+            background-color: #f4f4f4;
         }
+
 
         .note {
             border: 1px solid #ccc;
@@ -37,6 +34,7 @@
         }
         .note:hover {
             box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+            cursor: pointer;
             /* transform: scale(1.2,1.2); */
             /* z-index: 100; */
         }
@@ -102,11 +100,12 @@
 <body>
   <br>
   <h2 style="text-align:center">WBJS notes 
-    <div>
+    <div id ="searchDiv">
         <input type="text" id='search' placeholder="search"> </input>
         <button id ="searchBtn"> Search </button>
     </div> 
   </h2>
+  <div id="display" style="position: fixed; font-size: larger ; text-align: center; top: 0; left: 0; height: 10000px; width: 100%; z-index: 99;background-color: #f4f4f4; display: none;"></div>
   <div id="note-container"></div>
   <script type="text/javascript" src= "jquery.min.js"></script>
   <script type="text/javascript" src= "jquery.sidebar.min.js"></script>
