adding an export feature for notes

--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -122,6 +122,7 @@
     <div id ="searchDiv">
         <input type="text" id='search' placeholder="search"> </input>
         <button id ="searchBtn"> Search </button>
+        <button id ="exporthBtn"> Export </button>
     </div> 
   </h2>
   <div id="display" class="display-div"> </div>
