adding embed for the server notes as well

--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -135,6 +135,8 @@
   <script type="text/javascript" src= "header@latest.js"></script>
   <script type="text/javascript" src= "list@latest.js"></script>
   <script type="text/javascript" src= "marker@latest.js"></script>
+  <script type="text/javascript" src= "embed@latest.js"></script>
+
   <script type="text/javascript" src= "quote@latest.js"></script>
   <script type="text/javascript" src= "simple-image@latest.js"></script>
   <script type="text/javascript" src= "table@latest.js"></script>
