updating server files with new addons

--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -186,6 +186,9 @@
   <script type="text/javascript" src= "list@latest.js"></script>
   <script type="text/javascript" src= "marker@latest.js"></script>
   <script type="text/javascript" src= "embed@latest.js"></script>
+  <script type="text/javascript" src= "attaches@latest.js"></script>
+  <script type="text/javascript" src= "editorjs-ask.js"></script>
+
 
   <script type="text/javascript" src= "quote@latest.js"></script>
   <script type="text/javascript" src= "simple-image@latest.js"></script>
