improving css for search page

--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -10,9 +10,9 @@
         }
         .note-content {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
             grid-gap: 0.3em;
-            width: 60%;
+            width: 70%;
             margin: 0 auto;
             row-gap: 0.3em;
         }
@@ -27,7 +27,7 @@
             background-color: #E6E6FA;
             opacity: 0.9;
             transition: box-shadow 0.3s ease;
-            display: none; 
+            display: 'block'; 
         }
 
         .note-title {
@@ -146,7 +146,7 @@
             margin-bottom: 20px;
             margin: 20px auto;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            width: 60%;
+            width: 71%;
         }
 
         .result-title a {
@@ -172,7 +172,7 @@
     <div id ="searchDiv">
         <input type="text" id='search' placeholder="search"> </input>
         <button id ="searchBtn"> Search </button>
-        <button id ="exporthBtn"> Export </button>
+        <!-- <button id ="exporthBtn"> Export </button> -->
     </div> 
   </h2>
   <div id="display" class="display-div"> </div>
