--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -27,7 +27,7 @@
             background-color: #E6E6FA;
             opacity: 0.9;
             transition: box-shadow 0.3s ease;
-            display: 'block'; 
+            display: none; 
         }
 
         .note-title {
@@ -144,7 +144,7 @@
             background-color: #fff;
             padding: 20px;
             margin-bottom: 20px;
-            margin: 20px auto;
+            margin: 5px auto;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             width: 71%;
         }
