--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -50,14 +50,16 @@
             padding: 3px 6px;
             font-size: 11px;
             color: #000000;
-            background-color: #007bff4a;
+            background-color: #78bcff12;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            width:100%;
+            height:35px;
         }
 
         .toggle-notes:hover {
-            background-color: #0057b350;
+            background-color: #78bcff30;
         }
         button {
             margin-top: 20px;
