added video viewer to view downloaded videos

--- a/wbjs-server/home.html
+++ b/wbjs-server/home.html
@@ -32,6 +32,7 @@
             <div style='text-align: center' id="options"> 
                 <button class="button" onclick="window.location.href='/notesViewer'">Notes Viewer</button>
                 <button class="button" onclick="window.location.href='/pdfViewer'"> Saved PDFs viewer</button>
+                <button class="button" onclick="window.location.href='/videoViewer'">Saved Videos viewer</button>   
             </div>
         </div>
     
