--- a/wbjs-server/video.html
+++ b/wbjs-server/video.html
@@ -3,14 +3,14 @@
 <head>
     <title>Video Loader</title>
     <style>
-        iframe {
+        #videoFrame {
             width: 70%;
             height: 700px;
         }
     </style>
 </head>
 <body>
-    <iframe id="videoFrame"></iframe>
+    <video id="videoFrame"></video>
 
     <script>
 
