adding video controls back

--- a/wbjs-server/video.html
+++ b/wbjs-server/video.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <video id="videoFrame"></video>
+    <video controls="true" id="videoFrame"></video>
 
     <script>
 
