--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -76,6 +76,22 @@
             background-color: #0056b3;
 
         }
+        .buttonNav {
+            margin-top: 20px;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #007072b2;
+            /* color: #fff; */
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .buttonNav:hover {
+            background-color: #0070727c;
+            cursor: pointer;
+        }
+
         .beautiful-button {
             font-size: 1em;
             padding: 10px;
@@ -186,11 +202,16 @@
         background-color: #0057b350;
         cursor: pointer;
         }
-    </style>
+    </style>button
 </head>
 <body>
   <br>
   <h2 style="text-align:center">WBJS notes 
+    <div style='text-align: center' id="options"> 
+        <button class="buttonNav" onclick="window.location.href='/notesViewer'">Notes Viewer</button>
+        <button class="buttonNav" onclick="window.location.href='/pdfViewer'"> Saved PDFs viewer</button>
+        <button class="buttonNav" onclick="window.location.href='/videoViewer'">Saved Videos viewer</button>   
+    </div>
     <div id ="searchDiv">
         <input type="text" id='search' placeholder="search"> </input>
         <button id ="searchBtn"> Search </button>
