cleaning notesViewer Page

--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -109,11 +109,11 @@
 
         }
         #search {
-            width: 400px;
+            width: 500px;
             height: 45px;
             border: 1px solid #dfe1e5;
             box-shadow: none;
-            border-radius: 6px;
+            border-radius: 20px;
             padding: 0 20px;
             margin: 20px 0;
             font-size: 16px;
@@ -214,7 +214,7 @@
     </div>
     <div id ="searchDiv">
         <input type="text" id='search' placeholder="search"> </input>
-        <button id ="searchBtn"> Search </button>
+        <!-- <button id ="searchBtn"> Search </button> -->
     </div> 
   </h2>
   <div id="display" class="display-div"> </div>
