Fixing searchDb update method
- Fixes #98

--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -208,9 +208,9 @@
   <br>
   <h2 style="text-align:center">WBJS notes 
     <div style='text-align: center' id="options"> 
-        <button class="buttonNav" onclick="window.location.href='/notesViewer'">Notes Viewer</button>
-        <button class="buttonNav" onclick="window.location.href='/pdfViewer'"> Saved PDFs viewer</button>
-        <button class="buttonNav" onclick="window.location.href='/videoViewer'">Saved Videos viewer</button>   
+        <!-- <button class="buttonNav" onclick="window.location.href='/notesViewer'">Notes Viewer</button> -->
+        <button class="buttonNav" onclick="window.location.href='/pdfViewer'"> Saved PDFs</button>
+        <button class="buttonNav" onclick="window.location.href='/videoViewer'">Saved Videos</button>   
     </div>
     <div id ="searchDiv">
         <input type="text" id='search' placeholder="search"> </input>
