Add pdf annotations to DB - beta
This commit searches the notes/docs/ directory for annotations from the pdf files and add them to the WBJS database

--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -202,7 +202,7 @@
         background-color: #0057b350;
         cursor: pointer;
         }
-    </style>button
+    </style>
 </head>
 <body>
   <br>
