Tokenization for notesViewer
This commit is a rewrite of the entire logic that was used in the
notesViewer.
Now all the javascript that is required for the notesViewer is inserted
by the extension along with the tokens required for authentication. This
ensures that communication with the server is always done with an
authorized token and prevents stray traffic.

- Resolved #93

--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -73,6 +73,6 @@
     <script type="text/javascript" src= "table@latest.js"></script>
     <script type="text/javascript" src= "clipboard.min.js"></script>
 
-    <script type="text/javascript" src= "wbjs.js"></script>
+    <!-- <script type="text/javascript" src= "wbjs.js"></script> -->
   </body>
 </html>
