--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -36,7 +36,7 @@
             <a class="btn btn-light text-muted" onclick="window.location.href='/videoViewer'">Videos</a>
           </div>
           <div class="col-4 text-center">
-            <a class="blog-header-logo text-dark" href="#">WBJS Notes</a>
+            <a class="blog-header-logo text-dark" href="https://github.com/kvgc153/WebResearcherJS">WebResearcher</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
           </div>
