Add auth for pdfViewer and videoViewer
This commit adds auth for pdfViewer and videoViewer by passing it
through the notesViewer authentication system.
Also updates the notesViewer to show the new canvas page + minor cleanup
of the server code

--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -32,13 +32,14 @@
           <!-- <button class="btn btn-light" onclick="window.location.href='/pdfViewer'"> Saved PDFs</button>
           <button class="btn btn-light" onclick="window.location.href='/videoViewer'">Saved Videos</button> -->
           <div class="col-4 pt-1">
-            <a class="btn btn-light text-muted" onclick="window.location.href='/pdfViewer'">PDFs</a>
-            <a class="btn btn-light text-muted" onclick="window.location.href='/videoViewer'">Videos</a>
+            <a class="btn btn-light text-muted" onclick="window.location.href='/notesViewer?pdfs=true'">PDFs</a>
+            <a class="btn btn-light text-muted" onclick="window.location.href='/notesViewer?videos=true'">Videos</a>
           </div>
           <div class="col-4 text-center">
             <a class="blog-header-logo text-dark" href="https://github.com/kvgc153/WebResearcherJS">WebResearcher</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
+            <a class="btn btn-light text-muted" onclick="window.location.href='/notesViewer?canvas=true'">New canvas</a>
           </div>
         </div>
         <div id ="searchDiv" class="mx-auto">
