adding graph functionality-alpha

--- a/wbjs-server/notes.html
+++ b/wbjs-server/notes.html
@@ -34,12 +34,13 @@
           <div class="col-4 pt-1">
             <a class="btn btn-light text-muted" onclick="window.location.href='/notesViewer?pdfs=true'">PDFs</a>
             <a class="btn btn-light text-muted" onclick="window.location.href='/notesViewer?videos=true'">Videos</a>
+            <a class="btn btn-light text-muted" onclick="window.location.href='/notesViewer?canvas=true'">New canvas</a>
           </div>
           <div class="col-4 text-center">
             <a class="blog-header-logo text-dark" href="https://github.com/kvgc153/WebResearcherJS">WebResearcher</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
-            <a class="btn btn-light text-muted" onclick="window.location.href='/notesViewer?canvas=true'">New canvas</a>
+            <a class="btn btn-light text-muted" onclick="window.location.href='/notesViewer?graph=true'">View graph</a>
           </div>
         </div>
         <div id ="searchDiv" class="mx-auto">
